# middle-good-scrolling

./: .SRCINFO  .gitignore  80-defter-scrolling.preset  80-middle-good-scrolling.preset  Cargo.toml  DEBIAN_BUILD.md  PKGBUILD  README.md  default.nix  defter-scrolling  defter-scrolling.conf  defter-scrolling.install  defter-scrolling.service  flake.nix  generate-service.sh  install.sh  middle-good-scrolling  middle-good-scrolling.conf  middle-good-scrolling.install  middle-good-scrolling.py  middle-good-scrolling.service  tractrix pull tombstone.py  uninstall.sh
debian/: changelog  conffiles  control  install  middle-good-scrolling.service  rules
src/: main.rs
